--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,67 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    app:cardElevation="4dp"
+    android:layout_height="match_parent"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="0dp"
+    android:layout_marginBottom="8dp"
+
     android:focusable="false"
     android:focusableInTouchMode="false"
     android:clickable="false"
-    android:layout_marginBottom="8dp"
     >
-    <RelativeLayout
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:clickable="false"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="5"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false">
 
 
-        <ImageButton
+        <ImageView
             android:id="@+id/food_image"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"
             android:scaleType="centerCrop"
             android:src="@drawable/background2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            />
 
         <LinearLayout
-            android:weightSum="10"
-            android:orientation="horizontal"
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="#4f0e0d0e"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:weightSum="10"
+
             >
 
             <TextView
                 android:id="@+id/food_name"
-                android:text="Name of Food"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:gravity="center"
-                android:layout_weight="8"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:text="Name of Food"
+                android:textSize="20sp" />
+
             <ImageView
                 android:id="@+id/btnShare"
-                android:src="@drawable/ic_share_black_24dp"
-                android:tint="@android:color/white"
-                android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_share_black_24dp"
+                android:tint="@color/colorAccent" />
 
             <ImageView
                 android:id="@+id/fav"
-                android:src="@drawable/ic_favorite_border_black_24dp"
-                android:layout_weight="1"
-                android:tint="@android:color/white"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_favorite_border_black_24dp"
+                android:tint="@color/colorAccent" />
         </LinearLayout>
-    </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:layout_margin="10dp"
+                android:id="@+id/food_price"
+                android:text="$100"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/btn_quick_cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_shopping_cart_black_24dp"
+                android:tint="@color/colorAccent"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="30dp"
+                android:layout_centerVertical="true"
+                />
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
